--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <script src="/src/js/signup.js"></script>
+  <script src="../js/signup.js"></script>
 </body>
 
 </html>
