--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <script src="/src/js/signin.js"></script>
+  <script src="../js/signin.js"></script>
 </body>
 
 </html>
