--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav>
         <ul class="cards">
             <li id="img1">
-                <img id="meridianos" src="./src/imagens/8509081_3942309.jpg" alt="Meridianos e Chakras">
+                <img id="meridianos" src="./src/imagens/8509081_3942309.png" alt="Meridianos e Chakras">
                 <h1>Meridianos e Chakras</h1>
                 <p>Equilibrio, abertura e cura através dos Chakras e Meridianos.</p>
             </li>
@@ -51,12 +51,12 @@
                 <p>Retirada de obsessões complexas e auto obsessão.</p>
             </li>
             <li id="img3">
-                <img id="bem-estar" src="./src/imagens/apometria.jpg" alt="Bem estar Imediato">
+                <img id="bem-estar" src="./src/imagens/apometria.png" alt="Bem estar Imediato">
                 <h1>Bem estar Imediato</h1>
                 <p>A sensação de leveza e paz são observados nos primeiros minutos após a sua sessão.</p>
             </li>
             <li id="img4">
-                <img id="afetivas" src="./src/imagens/PHOTOCREO-Michal-Bednarek-2.jpg" alt="Questões Afetivas">
+                <img id="afetivas" src="./src/imagens/PHOTOCREO-Michal-Bednarek-2.png" alt="Questões Afetivas">
                 <h1>Questões Afetivas</h1>
                 <p>Tratamento para relacionamento afetivos.</p>
             </li>
@@ -70,7 +70,7 @@
                     <h1 id="luis">Luis Vilela</h1>
                     <h2 id="sub-titulo-luis">Colônia das Flores</h2>
                 </hgroup>
-                <img id="foto-luis" src="./src/imagens/1.jpg" alt="Foto de Luis Vilela">
+                <img id="foto-luis" src="./src/imagens/1.png" alt="Foto de Luis Vilela">
 
                 <p id="text-luis">Luis Vilela, jornalista, terapeuta, palestrante e praticante da literatura espírita
                     por mais de 30 anos, e trabalhei em instituições espíritas como médium psicofônico.<br>
@@ -162,7 +162,7 @@
             <ul id="cta">
                 <li id="maos">
                     <h1>TRATAMENTO PRESENCIAL</h1>
-                    <img src="./src/imagens/maos-em-um-fundo-de-universo-digital.jpg" alt="Mãos se tocando">
+                    <img src="./src/imagens/maos-em-um-fundo-de-universo-digital.png" alt="Mãos se tocando">
                     <a href="https://pay.sumup.io/b2c/QKBLUDAC">
                         <input type="button" value="AGENDAR SESSÃO">
                     </a>
@@ -177,7 +177,7 @@
 
                 <li id="silhueta">
                     <h1>TRATAMENTO À DISTÂNCIA</h1>
-                    <img src="./src/imagens/artigo_1_Jonathan_Imag.jpg" alt="Silhueta no cosmos">
+                    <img src="./src/imagens/artigo_1_Jonathan_Imag.png" alt="Silhueta no cosmos">
                     <a href="https://pay.sumup.io/b2c/QJJUU2I2">
                         <input type="button" value="AGENDAR SESSÃO">
                     </a>
@@ -194,7 +194,7 @@
 
                 <li id="corpos">
                     <h1>SEJA UM DE NOSSOS ALUNOS</h1>
-                    <img src="./src/imagens/imagem-do-whatsapp.jpg" alt="Imagem apometria">
+                    <img src="./src/imagens/imagem-do-whatsapp.png" alt="Imagem apometria">
                     <a href="https://pay.sumup.io/b2c/Q3LT1P3Y">
                         <input type="button" value="QUERO SER UM ALUNO">
                     </a>
